--- a/templates/index.html
+++ b/templates/index.html
@@ -5,20 +5,43 @@
 
 {% block content %}
 
+<body>
+    <div style="width: 300px;margin-left: auto;margin-right: auto;margin-top: 8%;">
+        <div>
+            <h1 align=center>课程表<sup>alpha</sup>
+            </h1>
+            <hr />
+            <p>使用 URP 教务系统账号登录即可。</p>
+            <p style="color: #FF0000;">本站承诺不会保存您的账号密码信息。</p>
+        </div>
 
-<div style="width: 300px;margin-left: auto;margin-right: auto;margin-top: 15%;">
-    <form class="form" method="POST">
-        <h1 align=center>课程表<sup>alpha</sup>
-        </h1>
-        <hr />
-        <p>使用 URP 教务系统账号登录即可。</p>
-        <p style="color: #FF0000;">本站承诺不会保存您的账号密码信息。</p>
-        {{ form.hidden_tag() }}
-        {{ wtf.form_field(form.username) }}
-        {{ wtf.form_field(form.password) }}
-        {{ wtf.form_field(form.submit) }}
+        <div>
+            <form class="form" method="POST">
+                {{ form.hidden_tag() }}
+                {{ wtf.form_field(form.username) }}
+                {{ wtf.form_field(form.password) }}
+                {{ wtf.form_field(form.submit) }}
+            </form>
+        </div>
 
-    </form>
+        <div style="position: relative;margin-top:10%">
+            <p><b>Tips:</b> </p>
+            <p style="text-indent:1em;">iOS 用户请使用 Safari 浏览器打开本页面。</p>
+            <p style="text-indent:1em;">因服务器位于海外，如访问缓慢请耐心等待，无需反复点击或刷新，谢谢合作。</p>
+            <p style="text-indent:1em;">本项目于 GitHub 开源，如果在使用中遇到任何问题，请提交 issue 或通过 QQ 联系开发者。</p>
+        </div>
 
-</div>
+    </div>
+
+</body>
+
+{% block footer %}
+<footer style="height:50px;position:absolute;bottom:0px;width: 100%;">
+    <div>
+        <p align=center>A <a href=" https://github.com/Sky1wu/NPUMD_URP_class_schedule_web">Sky1Wu </a>'s
+            project. | QQ: 919463944</p>
+    </div>
+</footer>
+{% endblock %}
+
 {% endblock %}
