--- a/templates/index.html
+++ b/templates/index.html
@@ -2,17 +2,34 @@
 {% import "bootstrap/wtf.html" as wtf %}
 
 
-
 {% block content %}
+<html>
+
+<head>
+    <title>课程表</title>
+    <style>
+        .content {
+            position: relative;
+            width: 300px;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 5%;
+        }
+
+        #footer {
+            margin-top: 10%;
+        }
+    </style>
+</head>
 
 <body>
-    <div style="width: 300px;margin-left: auto;margin-right: auto;margin-top: 8%;">
+    <div class="content">
         <div>
             <h1 align=center>课程表<sup>alpha</sup>
             </h1>
             <hr />
-            <p>使用 URP 教务系统账号登录即可。</p>
-            <p style="color: #FF0000;">本站承诺不会保存您的账号密码信息。</p>
+            <p align=center>使用 URP 教务系统账号登录即可。</p>
+            <p align=center style="color: #FF0000;">本站承诺不会保存您的账号密码信息。</p>
         </div>
 
         <div>
@@ -24,10 +41,11 @@
             </form>
         </div>
 
-        <div style="position: relative;margin-top:10%">
+        <div class="div2" style="position: relative;margin-top:10%">
             <p><b>Tips:</b> </p>
             <p style="text-indent:1em;">iOS 用户请使用 Safari 浏览器打开本页面。</p>
-            <p style="text-indent:1em;">因服务器位于海外，如访问缓慢请耐心等待，无需反复点击或刷新，谢谢合作。</p>
+            <p style=" text-indent:1em;">因服务器位于海外，如访问缓慢请耐心等待，无需反复点击或刷新，谢谢合作。</p>
+            <p style="text-indent: 1em;">本项目为个人项目，与「西北工业大学明德学院」官方无任何关系。</p>
             <p style="text-indent:1em;">本项目于 GitHub 开源，如果在使用中遇到任何问题，请提交 issue 或通过 QQ 联系开发者。</p>
         </div>
 
@@ -36,12 +54,14 @@
 </body>
 
 {% block footer %}
-<footer style="height:50px;position:absolute;bottom:0px;width: 100%;">
+<footer id="footer">
     <div>
         <p align=center>A <a href=" https://github.com/Sky1wu/NPUMD_URP_class_schedule_web">Sky1Wu </a>'s
             project. | QQ: 919463944</p>
     </div>
 </footer>
+
+</html>
 {% endblock %}
 
 {% endblock %}
