--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,12 @@
 {% extends "bootstrap/base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
+{% block title %}课程表{% endblock %}
 
 {% block content %}
 <html>
 
 <head>
-    <title>课程表</title>
     <style>
         .content {
             position: relative;
