--- a/templates/index.html
+++ b/templates/index.html
@@ -30,6 +30,7 @@
             <hr />
             <p align=center>使用 URP 教务系统账号登录即可。</p>
             <p align=center style="color: #FF0000;">本站承诺不会保存您的账号密码信息。</p>
+
         </div>
 
         <div>
@@ -42,6 +43,7 @@
         </div>
 
         <div class="div2" style="position: relative;margin-top:10%">
+
             <p><b>Tips:</b> </p>
             <p style="text-indent:1em;">iOS 用户请使用 Safari 浏览器打开本页面。</p>
             <p style=" text-indent:1em;">因服务器位于海外，如访问缓慢请耐心等待，无需反复点击或刷新，谢谢合作。</p>
@@ -56,6 +58,7 @@
 {% block footer %}
 <footer id="footer">
     <div>
+        <p align=center>本站已生成 <a style="color: #FF0000;">{{ count }}</a> 份课程表。</p>
         <p align=center>A <a href=" https://github.com/Sky1wu/NPUMD_URP_class_schedule_web">Sky1Wu </a>'s
             project. | QQ: 919463944</p>
     </div>
