--- a/templates/index.html
+++ b/templates/index.html
@@ -48,8 +48,8 @@
 
             <p><b>Tips:</b> </p>
             <p style="text-indent:1em;">iOS 用户请使用 Safari 浏览器打开本页面。</p>
-            <p style=" text-indent:1em;">小米手机（MIUI）由于系统限制暂不支持。</p>
-            <p style=" text-indent:1em;">因服务器位于海外，如访问缓慢请耐心等待，无需反复点击或刷新，谢谢合作。</p>
+            <p style="text-indent:1em;">下载 ics 文件后通过系统日历打开即可导入。</p>
+            <p style=" text-indent:1em; color: #FF0000;">小米手机（MIUI）由于系统限制暂不支持。</p>
             <p style="text-indent: 1em;">本项目为个人项目，与「西北工业大学明德学院」官方无任何关系。</p>
             <p style="text-indent:1em;">本项目于 GitHub 开源，如果在使用中遇到任何问题，请提交 issue 或通过 QQ 联系开发者。</p>
         </div>
