--- a/templates/index.html
+++ b/templates/index.html
@@ -62,8 +62,8 @@
 <footer id="footer">
     <div>
         <p align=center>截至目前已有 <a style="color: #FF0000;">{{ count }}</a> 位同学生成课程表。</p>
-        <p align=center>A <a href=" https://github.com/Sky1wu/NPUMD_URP_class_schedule_web">Sky1Wu</a>'s
-            project. | QQ: 919463944</p>
+        <p align=center>A <a href={{ github }}>{{ devName }}</a>'s
+            project. | QQ: {{ QQ }}</p>
     </div>
 </footer>
 
